PKG_CHECK_MODULES(CLIENT_DEP
    REQUIRED
    libsmack
    libcap
    )

SET(CLIENT_VERSION_MAJOR 1)
SET(CLIENT_VERSION ${CLIENT_VERSION_MAJOR}.0.2)

INCLUDE_DIRECTORIES(SYSTEM
    ${CLIENT_DEP_INCLUDE_DIRS}
    )

INCLUDE_DIRECTORIES(
    ${INCLUDE_PATH}
    ${COMMON_PATH}/include
    ${CLIENT_PATH}/include
    ${DPL_PATH}/core/include
    ${DPL_PATH}/log/include
    )

SET(CLIENT_SOURCES
    ${CLIENT_PATH}/client-security-manager.cpp
    ${CLIENT_PATH}/client-common.cpp
    ${CLIENT_PATH}/client-offline.cpp
    )

ADD_LIBRARY(${TARGET_CLIENT} SHARED ${CLIENT_SOURCES})

SET_TARGET_PROPERTIES(${TARGET_CLIENT}
    PROPERTIES
        COMPILE_FLAGS "-D_GNU_SOURCE -fPIC -fvisibility=hidden"
        SOVERSION ${CLIENT_VERSION_MAJOR}
        VERSION ${CLIENT_VERSION}
    )

TARGET_LINK_LIBRARIES(${TARGET_CLIENT}
    ${TARGET_COMMON}
    ${CLIENT_DEP_LIBRARIES}
    )

INSTALL(TARGETS ${TARGET_CLIENT} DESTINATION ${LIB_INSTALL_DIR})
