INSTALL(FILES
    ${INCLUDE_PATH}/security-manager.h
    ${INCLUDE_PATH}/security-manager-types.h
    ${INCLUDE_PATH}/app-manager.h
    ${INCLUDE_PATH}/app-runtime.h
    ${INCLUDE_PATH}/app-sharing.h
    ${INCLUDE_PATH}/label-monitor.h
    ${INCLUDE_PATH}/user-manager.h
    ${INCLUDE_PATH}/policy-manager.h
    DESTINATION ${INCLUDE_INSTALL_DIR}/security-manager
    )
