SET(NSS_PLUGIN_VERSION_MAJOR 2)
SET(NSS_PLUGIN_VERSION ${NSS_PLUGIN_VERSION_MAJOR}.0.0)

SET(LIBRARY_FILE_NAME "nss_securitymanager")

INCLUDE_DIRECTORIES(
    ${INCLUDE_PATH}
    ${CLIENT_PATH}/include
    ${NSS_PATH}/include
    ${DPL_PATH}/core/include
    ${DPL_PATH}/log/include
    )

SET(NSS_SOURCES
    ${NSS_PATH}/nss_securitymanager.cpp
    )

ADD_LIBRARY(${TARGET_NSS} SHARED ${NSS_SOURCES})

SET_TARGET_PROPERTIES(${TARGET_NSS}
    PROPERTIES
        OUTPUT_NAME ${LIBRARY_FILE_NAME}
        COMPILE_FLAGS "-D_GNU_SOURCE -fPIC -fvisibility=hidden"
        SOVERSION ${NSS_PLUGIN_VERSION_MAJOR}
        VERSION ${NSS_PLUGIN_VERSION}
    )

TARGET_LINK_LIBRARIES(${TARGET_NSS}
    ${TARGET_CLIENT}
    ${TARGET_COMMON}
    )

INSTALL(TARGETS ${TARGET_NSS} LIBRARY DESTINATION ${LIB_INSTALL_DIR} NAMELINK_SKIP)
