include(FindPkgConfig)

PKG_CHECK_MODULES(WRT_OCSP_DEPS
    dpl-efl
    dpl-dbus-efl
    REQUIRED
    )

SET(WRT_OCSP_DIR
    ${PROJECT_SOURCE_DIR}/wrt_ocsp
    )

SET(WRT_OCSP_SRC_DIR
    ${WRT_OCSP_DIR}/src
    )

SET(WRT_OCSP_INCLUDE_DIR
    ${WRT_OCSP_DIR}/include
    )

SET(WRT_OCSP_SOURCES
    ${WRT_OCSP_SRC_DIR}/wrt_ocsp_api.cpp
    )

SET(WRT_OCSP_INCLUDES
    ${WRT_OCSP_DEPS_INCLUDE_DIRS}
    ${WRT_OCSP_INCLUDE_DIR}
    ${PROJECT_SOURCE_DIR}/src/services/ocsp
    ${PROJECT_SOURCE_DIR}/src/services/ocsp/dbus/api
    ${PROJECT_SOURCE_DIR}/src/daemon/dbus
    )

ADD_DEFINITIONS(${WRT_OCSP_DEPS_CFLAGS})
ADD_DEFINITIONS(${WRT__CFLAGS_OTHER})

INCLUDE_DIRECTORIES(${WRT_OCSP_INCLUDES})

ADD_LIBRARY(${TARGET_WRT_OCSP_LIB} SHARED ${WRT_OCSP_SOURCES})

SET_TARGET_PROPERTIES(${TARGET_WRT_OCSP_LIB} PROPERTIES
    SOVERSION ${API_VERSION}
    VERSION ${VERSION})

SET_TARGET_PROPERTIES(${TARGET_WRT_OCSP_LIB} PROPERTIES
    COMPILE_FLAGS -fPIC)

TARGET_LINK_LIBRARIES(${TARGET_WRT_OCSP_LIB}
    ${WRT_OCSP_DEPS_LIBRARIES}
    ${WRT_OCSP_DEPS_LDFLAGS}
    )

INSTALL(TARGETS ${TARGET_WRT_OCSP_LIB}
    DESTINATION lib)

INSTALL(FILES
    ${WRT_OCSP_INCLUDE_DIR}/wrt_ocsp_api.h
    DESTINATION include/wrt-ocsp
    )
